<resources>
    <string name="app_name">MyDavaleba</string>
    <string name="email">email</string>
    <string name="age">age</string>
    <string name="failed">Failed</string>
    <string name="succes">Succes</string>
    <string name="last_name">last name</string>
    <string name="first_name">first name</string>
    <string name="update">update</string>
    <string name="remove">remove</string>
    <string name="add">add</string>
    <string name="deleted">Deleted</string>
    <string name="active">Active</string>
    <string name="_0">0</string>
    <string name="person_info">Person Info</string>
</resources>