<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".PersonActivity">

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/input_shape"
        android:fontFamily="@font/proxima_semi_bold"
        android:paddingStart="80dp"
        android:paddingTop="5dp"
        android:paddingEnd="54dp"
        android:paddingBottom="8dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/lastNameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/personInfo"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/lastNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/input_shape"
        android:fontFamily="@font/proxima_semi_bold"
        android:paddingStart="80dp"
        android:paddingTop="5dp"
        android:paddingEnd="54dp"
        android:paddingBottom="8dp"
        android:text=""
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/eMailTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameTextView" />

    <TextView
        android:id="@+id/eMailTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/input_shape"
        android:fontFamily="@font/proxima_semi_bold"
        android:paddingStart="80dp"
        android:paddingTop="5dp"
        android:paddingEnd="54dp"
        android:paddingBottom="8dp"
        android:text=""
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/ageTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastNameTextView" />

    <TextView
        android:id="@+id/ageTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/input_shape"
        android:fontFamily="@font/proxima_semi_bold"
        android:paddingStart="80dp"
        android:paddingTop="5dp"
        android:paddingEnd="54dp"
        android:paddingBottom="8dp"
        android:text=""
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eMailTextView" />

    <TextView
        android:id="@+id/personInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/proxima_extra_bold"
        android:text="@string/person_info"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/nameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_return_button" />

    <TextView
        android:id="@+id/nameTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proxima_black"
        android:text="@string/first_name"
        android:textSize="17sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/nameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.739"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lastNameTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proxima_black"
        android:text="@string/last_name"
        android:textSize="17sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/lastNameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.741"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/emailTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proxima_black"
        android:text="@string/email"
        android:textSize="17sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/eMailTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.765"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ageTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proxima_black"
        android:text="@string/age"
        android:textSize="17sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/ageTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.774"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>